--- a/templates/layout.html
+++ b/templates/layout.html
@@ -21,7 +21,7 @@
                     <a href="https://shows.acast.com/here-there">歪脑听</a>
                     <a href="/wainao-watches">歪脑看</a>
                     <a href="/english">English</a>
-                    <a href="https://radiosfreeasia.org">RFA</a>
+                    <a href="https://whynotrfa.org">RFA</a>
                 </div>
             </div>
         </nav>
